# MarkdownDemoNew

./: .dockerignore  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Roland-143_MarkdownDemoNew_d97414.json  app.py  docker-compose.yml  pyproject.toml  pytest.ini  sbom-github.spdx.json
.github/workflows/: ci.yaml  ci.yml  codeql.yml  deploy.yml  sbom.yml
db/: docker_seed.sql  sample_queries.sql  schema.sql  seed.sql
docs/: architecture_design_records.md  assumptions_scope.md  data_design.md  tech_stack_decision_records.md
ops_summary/: __init__.py  config.py  db.py  normalize.py  reconcile.py  test_data.py
scripts/: check_gpl_licenses.py
tests/: conftest.py
tests/e2e/: test_streamlit_e2e.py
tests/integration/: test_database_reconciliation.py
tests/unit/: test_logging.py  test_normalize.py  test_reconcile.py
